--- a/style.css
+++ b/style.css
@@ -1,1 +1,98 @@
-/*font-family: "Poppins", sans-serif;*/
+/**/
+
+*{
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+ font-family: "Poppins", sans-serif;
+ outline: none;
+}
+
+body{
+    background-color: #8A51FC;
+}
+
+.logo{
+    width: 250px;
+    display: block;
+    margin: 20px auto;
+}
+
+main{
+    width: 375px;
+    background: #f4f4f4;
+    border-radius: 20px;
+    margin: 0 auto 40px;
+    padding: 44px 24px 24px;
+}
+
+label{
+    color:#777777;
+    font-weight: 400;
+    font-size: 14px;
+    
+}
+
+select, input{
+    background:white ;
+    border: 1px solid #bbbbbb;
+    height: 48px;
+    width: 100%;
+    margin-bottom: 24px;
+    appearance: none;
+    padding-left: 20px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #555555;
+    cursor: pointer;
+}
+
+button{
+    background: #772fd3;
+    border-radius: 5px;
+    width: 100%;
+    height:  48px;
+    color: white;
+    border: none;
+    font-weight: 700;
+    font-size: 18px;
+    cursor: pointer;
+}
+button:hover{
+    opacity: 0.8;
+}
+button{
+    opacity: 0.6;
+}
+
+section{
+    border: 1px solid #772fd3;
+    border-radius: 20px;
+    margin-top: 36px;
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.arrow-img{
+    margin: 15px 0;
+}
+
+.currency-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
+
+.currency{
+    color: #777777;
+    font-size: 14px;
+}
+
+.currency-value{
+    color: #555555;
+    font-weight: 700;
+    font-size: 20px;
+}
